add first paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Ghanian Akan Names</h1>
+  <p>Ghanians have a beautiful culture of naming their children <br> as a <em>'day name'</em> which corresponds to the day<br> in the week they were born.</p>
   <script src="code.js"></script>
 </body>
 </html>
