add background image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AKAN NAMES</title>
+
   <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
+
+  <div class="intro">
   <h1>Ghanian Akan Names</h1>
   <p>Ghanians have a beautiful culture of naming their children <br> as a <em>'day name'</em> which corresponds to the day<br> in the week they were born.</p>
+  </div>
+
   <script src="code.js"></script>
 </body>
 </html>
